--- a/asm1.html
+++ b/asm1.html
@@ -13,7 +13,23 @@
 </head>
 <body>
 
-    <!-- Body content here -->
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
+    <!-- Content Section -->
+    <section id="home">
+        <h1>Welcome to My Professional Profile</h1>
+        <p>This is the homepage of Hafiz Abdullah Rafay's professional portfolio.</p>
+    </section>
+
+    
 </body>
 </html>
