--- a/asm1.html
+++ b/asm1.html
@@ -8,7 +8,43 @@
     <meta name="author" content="Hafiz Abdullah Rafay">
     <title>Professional Profile</title>
     <style>
-        /* CSS styling here */
+        /* Basic styles for mobile-first design */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            float: left;
+            display: block;
+            padding: 14px 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        /* Mobile styles */
+        @media screen and (max-width: 600px) {
+            nav ul li {
+                float: none;
+                text-align: center;
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
@@ -24,12 +60,11 @@
         </ul>
     </nav>
 
-    <!-- Content Section -->
+    <!-- Content (To be added in later steps) -->
     <section id="home">
         <h1>Welcome to My Professional Profile</h1>
         <p>This is the homepage of Hafiz Abdullah Rafay's professional portfolio.</p>
     </section>
 
-    
 </body>
 </html>
