Multi-language+text alignment

--- a/asm1.html
+++ b/asm1.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional Profile of Hafiz Abdullah Rafay">
-    <meta name="keywords" content="HTML, CSS, Professional Profile, Portfolio">
+    <meta name="keywords" content="HTML, CSS, Professional Profile, Portfolio, Multilingual">
     <meta name="author" content="Hafiz Abdullah Rafay">
     <title>Professional Profile</title>
     <style>
-        /* Basic styles for mobile-first design */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
-        
+
         nav {
             background-color: #333;
             overflow: hidden;
@@ -37,13 +36,46 @@
             text-decoration: none;
         }
 
-        /* Mobile styles */
         @media screen and (max-width: 600px) {
             nav ul li {
                 float: none;
                 text-align: center;
                 display: block;
             }
+        }
+
+        /* Language buttons */
+        .lang-buttons {
+            margin: 20px;
+        }
+
+        .lang-buttons button {
+            margin: 5px;
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        /* Hide all languages initially */
+        .lang-content {
+            display: none;
+        }
+
+        /* Display English content by default */
+        .lang-en {
+            display: block;
+        }
+
+        /* Specific text alignment for Arabic and Urdu (RTL) */
+        .lang-ar, .lang-ur {
+            direction: rtl;
+            text-align: right;
+        }
+
+        /* Specific text alignment for English and French (LTR) */
+        .lang-en, .lang-fr {
+            direction: ltr;
+            text-align: left;
         }
     </style>
 </head>
@@ -60,11 +92,53 @@
         </ul>
     </nav>
 
-    <!-- Content (To be added in later steps) -->
+    <!-- Language Buttons -->
+    <div class="lang-buttons">
+        <button onclick="setLanguage('en')">English</button>
+        <button onclick="setLanguage('ar')">عربى (Arabic)</button>
+        <button onclick="setLanguage('ur')">اردو (Urdu)</button>
+        <button onclick="setLanguage('fr')">Français (French)</button>
+    </div>
+
+    <!-- Content Section -->
     <section id="home">
-        <h1>Welcome to My Professional Profile</h1>
-        <p>This is the homepage of Hafiz Abdullah Rafay's professional portfolio.</p>
+        <!-- English Content -->
+        <div class="lang-content lang-en">
+            <h1>Welcome to My Professional Profile</h1>
+            <p>This is the homepage of Hafiz Abdullah Rafay's professional portfolio.</p>
+        </div>
+
+        <!-- Arabic Content -->
+        <div class="lang-content lang-ar">
+            <h1>مرحبًا بك في ملفي الشخصي الاحترافي</h1>
+            <p>هذه الصفحة الرئيسية لمحفظة عبد الله رفيع المهنية.</p>
+        </div>
+
+        <!-- Urdu Content -->
+        <div class="lang-content lang-ur">
+            <h1>میرے پیشہ ورانہ پروفائل میں خوش آمدید</h1>
+            <p>یہ عبد اللہ رفیع کے پیشہ ورانہ پورٹ فولیو کا ہوم پیج ہے۔</p>
+        </div>
+
+        <!-- French Content -->
+        <div class="lang-content lang-fr">
+            <h1>Bienvenue sur mon profil professionnel</h1>
+            <p>Ceci est la page d'accueil du portfolio professionnel de Hafiz Abdullah Rafay.</p>
+        </div>
     </section>
+
+    <!-- JavaScript for Language Switching -->
+    <script>
+        function setLanguage(language) {
+            // Hide all language content
+            document.querySelectorAll('.lang-content').forEach(function(content) {
+                content.style.display = 'none';
+            });
+
+            // Show the selected language content
+            document.querySelector('.lang-' + language).style.display = 'block';
+        }
+    </script>
 
 </body>
 </html>
