Update the link for social media feed

--- a/asm1.html
+++ b/asm1.html
@@ -357,7 +357,7 @@
     <section id="feed" class="container social-feed">
         <h2>Feed</h2>
         <p>Check out my Reddit profile for latest discussions and contributions:</p>
-        <a href="https://reddit.com/u/smooth-mind" target="_blank">Reddit Feed</a>
+        <a href="https://www.reddit.com/r/ProgrammerHumor/comments/1fgtpp8/ahtherestheproblem/#lightbox" target="_blank">Reddit Feed</a>
     </section>
 
     <!-- JavaScript for Language Switching -->
