Add JavaScript objects

--- a/asm1-B.html
+++ b/asm1-B.html
@@ -327,7 +327,37 @@
         <a href="https://www.reddit.com/r/ProgrammerHumor/comments/1fgtpp8/ahtherestheproblem/#lightbox" target="_blank">Reddit Feed</a>
     </section>
 
-   
+    <!-- JavaScript for Populating Data -->
+    <script>
+        const profileData = {
+            name: "Hafiz Abdullah Raffay",
+            skills: {
+                technical: ["C", "C++", "Python", "MySQL", "SQL Database", "Data Structures", "Algorithms", "Machine Learning"],
+                soft: ["Communication", "Adaptability", "Teamwork", "Leadership"]
+            },
+            projects: [
+                { name: "Multi-Player Ludo Game", description: "A digital Ludo game built with C++ and SFML." },
+                { name: "Paint Brush Application", description: "A drawing app created with Python and Tkinter." },
+                { name: "Chess Game", description: "A chess game developed using C++ and OOP principles." },
+                { name: "Gomoku Game", description: "A two-player Gomoku game built in C++." },
+                { name: "Machine Learning Projects", description: "Involved in some machine learning projects." }
+            ],
+            experience: [
+                { role: "General Secretary, GDSC ITU", description: "Currently the General Secretary of the Google Developer Student Club at ITU." },
+                { role: "Media Club Society", description: "Participated as a member of the ITU Media Club Society." },
+                { role: "Artist Society", description: "Involved with the ITU Artist Society." }
+            ],
+            awards: ["Microsoft Office Certificate"],
+            shortCourses: ["Introduction to Machine Learning"],
+            hackathons: ["Participated in Code Rush held at ITU, organized by GDSC ITU in March 2024"],
+            sideProjects: [
+                { name: "Linear Regression Project", description: "Built a simple linear regression model to predict housing prices." },
+                { name: "K-Means Clustering", description: "Created a basic clustering algorithm to group similar data points in a dataset." }
+            ]
+        };
+
+        
+    </script>
 
 </body>
 </html>
